Opened 15 years ago
Closed 15 years ago
#760 closed defect (fixed)
zzufed .mpg file crashes ffmpeg_g
| Reported by: | Diana Muscalu | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avcodec |
| Version: | git-master | Keywords: | aacsbr |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Attachments (4)
Change History (7)
by , 15 years ago
| Attachment: | corruptfile added |
|---|
comment:2 by , 15 years ago
(gdb) bt
#0 0x000000000095bbc3 in read_sbr_grid (gb=0x7fffffffb930, ch_data=0x142ef90,
ac=<optimized out>, sbr=<optimized out>) at libavcodec/aacsbr.c:629
#1 0x000000000095ca37 in read_sbr_channel_pair_element (gb=0x7fffffffb930,
sbr=0x142ef30, ac=0x13a3060) at libavcodec/aacsbr.c:971
#2 read_sbr_data (id_aac=1, gb=0x7fffffffb930, sbr=0x142ef30, ac=0x13a3060)
at libavcodec/aacsbr.c:1003
#3 ff_decode_sbr_extension (ac=0x13a3060, sbr=0x142ef30,
gb_host=<optimized out>, crc=<optimized out>, cnt=17, id_aac=1)
at libavcodec/aacsbr.c:1086
#4 0x0000000000956b48 in decode_extension_payload (elem_type=TYPE_CPE,
che=0x14148a0, cnt=17, gb=0x7fffffffbbc0, ac=0x13a3060)
at libavcodec/aacdec.c:1729
#5 aac_decode_frame_int (avctx=0x13a2880, data=0x13ca4e0,
got_frame_ptr=0x7fffffffbe88, gb=<optimized out>)
at libavcodec/aacdec.c:2225
#6 0x000000000095821e in latm_decode_frame (avctx=0x13a2880, out=0x13ca4e0,
got_frame_ptr=0x7fffffffbe88, avpkt=0x7fffffffbd60)
at libavcodec/aacdec.c:2569
#7 0x00000000008799ee in avcodec_decode_audio4 (avctx=0x13a2880,
frame=0x13ca4e0, got_frame_ptr=0x7fffffffbe88, avpkt=0x7fffffffbd60)
at libavcodec/utils.c:1056
#8 0x0000000000439fb9 in transcode_audio (got_output=0x7fffffffbe88,
pkt=0x7fffffffbd60, ist=0x13a25c0) at ffmpeg.c:1749
---Type <return> to continue, or q <return> to quit---
#9 output_packet (ist=<optimized out>, ost_table=0x13d3990,
nb_ostreams=<optimized out>, pkt=<optimized out>) at ffmpeg.c:2036
#10 0x000000000043e151 in transcode (output_files=0x13d3c60,
nb_output_files=1, input_files=0x139ed10, nb_input_files=0)
at ffmpeg.c:2797
#11 0x0000000000435ba9 in main (argc=<optimized out>, argv=0x7fffffffe1b8)
at ffmpeg.c:4859
(gdb)
comment:3 by , 15 years ago
| Component: | FFmpeg → avcodec |
|---|---|
| Keywords: | aacsbr added |
| Reproduced by developer: | set |
| Resolution: | → fixed |
| Status: | new → closed |



use this file in ffmpeg to reproduce the crash (-i corruptfile -f null - )